<resources>
    <string name="app_name">MessengerApp</string>
    <string name="userame">Userame</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="select_photo">Select Photo</string>
    <string name="let_s_chat_d">Let\'s Chat!=D</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="login">Login</string>
    <string name="back_to_registration">Back To Registration</string>
    <string name="start_message">Start a message</string>
    <string name="send">Send</string>
</resources>