<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C31F4EAC"
    tools:context="registerLoginPackage.RegisterActivity">

    <ScrollView
        android:id="@+id/Register_ScrollView_ID"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animationCache="false"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/Register_ScrollViewLinearLayout_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="@string/let_s_chat_d"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                android:textColor="#80000000"
                android:textIsSelectable="false"
                android:textSize="36sp"
                android:textStyle="bold|italic" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ProfileCircle_ImageView_ID"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/ic_baseline_portrait_24"
                app:civ_border_color="#801738DA"
                app:civ_border_width="2dp"
                app:srcCompat="@android:drawable/ic_menu_camera" />

            <TextView
                android:id="@+id/SelectPhoto_TextView_ID"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginStart="176dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="177dp"
                android:gravity="center"
                android:text="@string/select_photo"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/userName_EditText_ID"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext_register"
                android:ems="10"
                android:hint="@string/userame"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <EditText
                android:id="@+id/Email_EditText_ID"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext_register"
                android:ems="10"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <EditText
                android:id="@+id/Password_EditText_ID"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext_register"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <Button
                android:id="@+id/Register_Button_ID"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_button"
                android:text="@string/register"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/AlreadyHaveAccount_TextView_ID"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:gravity="fill"
                android:text="@string/already_have_an_account"
                android:textColor="#000000"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>