<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C31F4EAC"
    tools:context="registerLoginPackage.LoginActivity">


    <ScrollView
        android:id="@+id/Login_ScrollView_ID"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/Login_ScrollViewLinearLayout_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <EditText
                android:id="@+id/LoginEmail_EditText_ID"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="200dp"
                android:background="@drawable/rounded_edittext_register"
                android:ems="10"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="16dp"
                android:paddingEnd="16dp" />


            <EditText
                android:id="@+id/LoginPassword_EditText_ID"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext_register"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp" />

            <Button
                android:id="@+id/Login_Button_ID"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_button"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/BackToRegistration_TextView_ID"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/back_to_registration"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>